--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,17 @@
-<h1>Holis</h1>
+<h1>Productos</h1>
+
+<table>
+    <tr>
+        <th>Id</th>
+        <th>Nombre</th>
+        <th>URL</th>
+        <th>Descripcion</th>
+    </tr>
+    <% @products.each do |product| %>
+        <tr>
+            <td><%= product.id %> </td>
+            <td><%= product.name %> </td>
+            <td><%= product.description %> </td>
+        </tr>
+    <% end %>
+</table>
