--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,9 @@
         <div class="col-sm-12">
             <h1>Productos</h1>
 
+            <div class="text-right">
+                <%= link_to "Publicar Producto", new_product_path, class:"btn btn-primary" %>
+            </div>
             <table class="table">
                 <tr>
                     <th>Id</th>
@@ -14,6 +17,7 @@
                     <tr>
                         <td><%= product.id %> </td>
                         <td><%= product.name %> </td>
+                        <td><%= product.url %> </td>
                         <td><%= product.description %> </td>
                     </tr>
                 <% end %>
